--- a/kc_lean_init.org
+++ b/kc_lean_init.org
@@ -2558,6 +2558,7 @@ With a Universal Arg, it will simply kill all instances"
 
   (add-hook 'python-mode-hook #'python-ts-mode)
   (add-hook 'python-ts-mode-hook #'display-line-numbers-mode)
+  (add-hook 'python-ts-mode-hook #'pyvenv-mode)
 
   )
 #+end_src
