--- a/kc_lean_init.org
+++ b/kc_lean_init.org
@@ -2364,6 +2364,21 @@ it'll only show file nodes"
 
   )
 #+end_src
+** Org src context
+
+This package helps Eglot or LSP-mode to work with org source code blocks. Only requirement is that there should be a ~:tangle filename.ext~ declared for either the file or subtree.
+
+It creates a copy of the tanged file in ~temporary-file-directory~.
+
+- Mailing list discussion and explanation of this mode: [[https://list.orgmode.org/orgmode/87bkqmdhqz.fsf@gmail.com/][list.orgmode.org - karthik chikmagalur]]
+- Alternative implementation in [[https://gist.github.com/bigodel/15599f3c1da23d1008b7d7d4ff8bff77][github gist - org-contextual-src-mode]]
+
+#+begin_src emacs-lisp
+(use-package org-src-context
+  :after org
+  )
+#+end_src
+
 ** Outline minor mode
 
 - Can be used in multiple modes, including prog-mode buffers such as python mode etc.
