--- a/kc_lean_init.org
+++ b/kc_lean_init.org
@@ -3023,6 +3023,14 @@ Activate and deactivate python virtual environments. Ensure that the minor mode 
   (add-hook 'writeroom-mode-disable-hook #'kc-header)
   )
 #+end_src
+** Yasnippet
+#+begin_src emacs-lisp
+(use-package yasnippet
+  :ensure t
+  :config
+  (yas-global-mode 1)
+  )
+#+end_src
 * Custom functions
 ** Change background file-visiting or not
 #+begin_src emacs-lisp
