--- a/kc_lean_init.org
+++ b/kc_lean_init.org
@@ -3052,6 +3052,8 @@ Activate and deactivate python virtual environments. Ensure that the minor mode 
 #+begin_src emacs-lisp
 (use-package yasnippet
   :ensure t
+  :delight
+  (yas-minor-mode)
   :config
   (yas-global-mode 1)
   )
