--- a/kc_lean_init.org
+++ b/kc_lean_init.org
@@ -906,11 +906,24 @@ This package adds additional font-lock rules to provide a more colourful Dired b
            "SPC pf" #'ess-view-data-goto-first-page
            "SPC pl" #'ess-view-data-goto-last-page
            "q" #'ess-view-data-quit
-           ) 
+           )
+  (:states '(normal visual)
+           :keymaps 'ess-view-data-edit-mode-map
+           "SPC m'" #'ess-view-data-do-commit
+           "SPC mk" #'ess-view-data-commit-abort
+           "SPC ma" #'ess-view-data-insert-all-cols
+           "SPC ml" #'ess-view-data-complete-data
+           "SPC mv" #'ess-view-data-insert-all-values
+           "SPC m <tab>" #'ess-view-data-complete-object
+           )
   :config
   (add-to-list 'display-buffer-alist
                '("^\\*R Data View:.*"
                  (display-buffer-same-window)))
+
+  (add-to-list 'display-buffer-alist
+               '("^\\*R Data View Edit:.*"
+                 (display-buffer-at-bottom)))
   )
 #+end_src
 ** Garbage collection magic hack
